--- a/VMs/VM1/Makefile
+++ b/VMs/VM1/Makefile
@@ -4,4 +4,4 @@ DEFAULT_INTERFACE_NAME = tun0
 all: tester_iftun
 
 tester_iftun:
-	./iftun $(DEFAULT_INTERFACE_NAME)
+	./test_iftun ${DEFAULT_INTERFACE_NAME} | hexdump -C 
