Extremite done. (before test)

--- a/iftun/Makefile
+++ b/iftun/Makefile
@@ -1,11 +1,12 @@
 CC = gcc
+FLAGS = -pthread
 DEFAULT_EXE = test_iftun
 DEFAULT_TUN_NAME = tun0
 ################################
 all: compile copyToPartage
 
 compile:
-	$(CC) iftun.c  iftun.h  tunalloc.c  tunalloc.h -o $(DEFAULT_EXE)
+	$(CC) $(FLAGS) iftun.c  iftun.h  tunalloc.c  tunalloc.h -o $(DEFAULT_EXE)
 
 tester_iftun:
 	./$(DEFAULT_EXE) tun0
