--- a/VMs/partage/config.json
+++ b/VMs/partage/config.json
@@ -1,17 +1,13 @@
 {
 	"server_side":{
 		"port":123,
-		"command":{ 
-			"name":"ip",
-			"args": ["-6", "route", "add", "fc00:1234:4::/64", "dev", "tun0"]
-		}
+		"tun_name":"tun0",
+		"remote_ip":"fc00:1234:4::/64"
 	},
 	"client_side":{
 		"host":"172.16.2.131",
 		"port":123,
-		"command":{ 
-			"name":"ip",
-			"args": ["-6", "route", "add", "fc00:1234:3::/64", "dev", "tun0"]
-		}
+		"tun_name":"tun0",
+		"remote_ip":"fc00:1234:3::/64"
 	}
 }
